# mini-waf

./: AGENTS.md  BENCHMARK_REAL_RULES.md  Cargo.toml  DELIVERABLES.md  IMPLEMENTATION_DETAILS.md  INDEX.md  Makefile  OLD_RULE_ENGINE_GUIDE.md  README.md  REFACTORING_REPORT.md  benchmark_output.txt  benchmark_rules.py  pub.txt
__MACOSX/crates/waf-engine/src/: ._audit
__MACOSX/rules/: ._high.yaml
antlr/: grule_v3.g4
backends/go-gin/: go.mod  main.go
backends/java-spring/: pom.xml
backends/python-fastapi/: main.py
bench/: clean.lua  mixed.lua  scanner.lua  sqli.lua  xss.lua
config/: waf.toml
config/data/: blacklist.txt
config/rules2/: backends.yaml  critical.yaml  detection.grl  global.yaml  high.yaml  medium.yaml
crates/optimized_rule/: Cargo.toml
crates/optimized_rule/src/: condition.rs  lib.rs  loader.rs  types.rs
crates/rule/: Cargo.toml
crates/rule/src/: condition.rs  lib.rs  loader.rs  types.rs
crates/waf/: Cargo.toml
crates/waf-api/: Cargo.toml
crates/waf-api/src/: lib.rs  server.rs
crates/waf-api/src/routes/: config.rs  feed.rs  metrics.rs  mod.rs  rules.rs
crates/waf-engine/: Cargo.toml
crates/waf-engine/benches/: engine_bench.rs
crates/waf-engine/src/: context.rs  lib.rs  pipeline.rs  plugin.rs
crates/waf-engine/src/audit/: logger.rs
crates/waf-engine/src/behaviour/: anomaly.rs  mod.rs  transaction.rs
crates/waf-engine/src/cache/: store.rs
crates/waf-engine/src/challenge/: js_challenge.rs  mod.rs  pow.rs
crates/waf-engine/src/config/: schema.rs
crates/waf-engine/src/ddos/: burst.rs
crates/waf-engine/src/detection/: body_abuse.rs  brute_force.rs  header_injection.rs  mod.rs  path_traversal.rs  recon.rs  sqli.rs  ssrf.rs  xss.rs
crates/waf-engine/src/fingerprint/: device.rs  ja3.rs  ja4.rs  mod.rs
crates/waf-engine/src/geo/: mod.rs  plugin.rs
crates/waf-engine/src/lists/: blacklist_plugin.rs  ip_list.rs  mod.rs
crates/waf-engine/src/proxy_detect/: asn.rs  mod.rs  xff.rs
crates/waf-engine/src/rate_limit/: sliding_window.rs  token_bucket.rs
crates/waf-engine/src/response/: filter.rs  mod.rs  redactor.rs
crates/waf-engine/src/risk/: canary.rs  mod.rs  scorer.rs
crates/waf-engine/src/rules/: loader.rs  matcher.rs  mod.rs  rule.rs  store.rs  watcher.rs
crates/waf-engine/src/rules/crs/: evaluator.rs  loader.rs  mod.rs  operator.rs  parser.rs  plugin.rs  target.rs  transform.rs  tx.rs  types.rs
crates/waf-engine/src/rules/grl/: ast.rs  converter.rs  functions.rs  grl.pest  mod.rs  parser.rs  printer.rs  registry.rs
crates/waf-engine/src/rules/rete/: alpha.rs  engine.rs  mod.rs  terminal.rs  working_memory.rs
crates/waf-engine/src/state/: store.rs
crates/waf-engine/tests/: detection_test.rs  rate_limit_test.rs  rule_engine_test.rs
crates/waf-proxy/: Cargo.toml
crates/waf-proxy/src/: handler.rs  lib.rs  server.rs  tls.rs  upstream.rs
crates/waf-proxy/tests/: proxy_test.rs
crates/waf-types/: Cargo.toml
crates/waf-types/src/: audit.rs  decision.rs  lib.rs  risk.rs  tier.rs
crates/waf/src/: cli.rs
dashboard/: package.json
dashboard/src/: index.ts
dashboard/src/api/: client.ts  ws.ts
dashboard/src/components/: Charts.ts  Config.ts  Feed.ts
dashboard/src/types/: index.ts
docs/: EN_present_v2.3.md  EN_waf_interop_contract_v2.3.md  VN_presen_v2.3.md  VN_waf_interop_contract_v2.3.md  architecture.md  benchmarks.md  ftw-failures.md  openapi.public.yaml  req.md  requirement.md  rule_engine.md
logs/: ftw-crs-failed-groups.txt  ftw-crs-failed-id-occurrences.txt  ftw-crs-failed-ids.txt
optimized_rule/: condition.rs  loader.rs  mod.rs  types.rs
rule/: condition.rs  loader.rs  mod.rs  types.rs
rules/: catch-all.yaml  critical.yaml  global.yaml  high.yaml  medium.yaml
tests/: rest_client.py
tests/fixtures/: sqli_payloads.txt  xss_payloads.txt
tests/ftw/: find_test.py  scanners_canary.yaml  sqli.yaml  transform_crs.py  traversal_ssrf.yaml  xss.yaml
tests/ftw/crs/REQUEST-911-METHOD-ENFORCEMENT/: 911100.yaml
tests/ftw/crs/REQUEST-913-SCANNER-DETECTION/: 913100.yaml
tests/ftw/crs/REQUEST-920-PROTOCOL-ENFORCEMENT/: 920100.yaml  920120.yaml  920121.yaml  920160.yaml  920170.yaml  920171.yaml  920180.yaml  920181.yaml  920190.yaml  920200.yaml  920201.yaml  920202.yaml  920210.yaml  920230.yaml  920240.yaml  920250.yaml  920260.yaml  920270.yaml  920271.yaml  920272.yaml  920273.yaml  920274.yaml  920275.yaml  920280.yaml  920290.yaml  920300.yaml  920310.yaml  920311.yaml  920320.yaml  920330.yaml  920340.yaml  920350.yaml  920360.yaml  920370.yaml  920380.yaml  920390.yaml  920400.yaml  920410.yaml  920420.yaml  920430.yaml  (+19 more)
tests/ftw/crs/REQUEST-921-PROTOCOL-ATTACK/: 921110.yaml  921120.yaml  921130.yaml  921140.yaml  921150.yaml  921151.yaml  921160.yaml  921180.yaml  921190.yaml  921200.yaml  921210.yaml  921220.yaml  921230.yaml  921240.yaml  921250.yaml  921421.yaml  921422.yaml
tests/ftw/crs/REQUEST-922-MULTIPART-ATTACK/: 922100.yaml  922110.yaml  922120.yaml  922130.yaml
tests/ftw/crs/REQUEST-930-APPLICATION-ATTACK-LFI/: 930100.yaml  930110.yaml  930120.yaml  930121.yaml  930130.yaml  930140.yaml
tests/ftw/crs/REQUEST-931-APPLICATION-ATTACK-RFI/: 931100.yaml  931110.yaml  931120.yaml  931130.yaml  931131.yaml
tests/ftw/crs/REQUEST-932-APPLICATION-ATTACK-RCE/: 932120.yaml  932125.yaml  932130.yaml  932131.yaml  932140.yaml  932160.yaml  932161.yaml  932170.yaml  932171.yaml  932175.yaml  932180.yaml  932190.yaml  932200.yaml  932205.yaml  932206.yaml  932207.yaml  932210.yaml  932220.yaml  932230.yaml  932231.yaml  932232.yaml  932235.yaml  932236.yaml  932237.yaml  932238.yaml  932239.yaml  (+21 more)
(+182 files in other folders)
