[package]
name    = "waf-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
waf-types   = { path = "../waf-types" }
waf-engine  = { path = "../waf-engine" }
tokio       = { workspace = true }
hyper       = { workspace = true }
hyper-util  = { workspace = true }
http-body-util = { workspace = true }
bytes       = { workspace = true }
tokio-util  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
